--- a/home.html
+++ b/home.html
@@ -94,7 +94,7 @@
                     <li><a class="nav-link" href="#quote">Quote</a></li>
                     <li><a class="nav-link" href="#about">About Us</a></li>
                     <li><a class="nav-link" href="#howwemet">Story</a></li>
-                    <li><a class="nav-link" href="#galleryTrack1">Gallery</a></li>
+                    <li><a class="nav-link" href="#memmory">Gallery</a></li>
                     <li><a class="nav-link" href="#Blessing">Blessing</a></li>
                 </ul>
             </div>
@@ -162,27 +162,27 @@
                             <div class="note_quote">
                                 <h2> "We're Gleam a small and enthusiastic <br> Photography minimalist style" </br>
                                 </h2>
-                                <h3> The little things in everyday life <br> make up creativity.</h3>                              
+                                <h3> Những điều nhỏ nhặt trong cuộc sống <br> cũng tạo nên niềm vui.</h3>                              
                             </div>
                             <div class="timecount">
                                 <!-- <h1>The art of life is to know how to enjoy a little</h1> -->
-                                <!-- <h1>Thời gian đã trôi qua từ 01/01/2023</h1> -->
+                                 <h3>Chúng ta đã trãi qua</h3>
                                 <div class="timer-wrapper">
                                 <div class="time-box">
                                     <div id="days" class="number">0</div>
-                                    <div class="label">Days</div>
+                                    <div class="label">Ngày</div>
                                 </div>
                                 <div class="time-box">
                                     <div id="hours" class="number">00</div>
-                                    <div class="label">Hours</div>
+                                    <div class="label">Giờ</div>
                                 </div>
                                 <div class="time-box">
                                     <div id="minutes" class="number">00</div>
-                                    <div class="label">Mins</div>
+                                    <div class="label">Phút</div>
                                 </div>
                                 <div class="time-box">
                                     <div id="seconds" class="number">00</div>
-                                    <div class="label">Secs</div>
+                                    <div class="label">giây</div>
                                 </div>
                                 </div>
                             </div>
