--- a/home.html
+++ b/home.html
@@ -160,13 +160,14 @@
                             <img src="Images/date-flowers.png"  title="" alt="" >
                         </div>                      
                             <div class="note_quote">
-                                <h2> "We're Gleam a small and enthusiastic <br> Photography minimalist style" </br>
-                                </h2>
-                                <h3> Những điều nhỏ nhặt trong cuộc sống <br> cũng tạo nên niềm vui.</h3>                              
+                                <!-- <h2> "We're Gleam a small and enthusiastic <br> Photography minimalist style" </br>
+                                </h2> -->
+                                <h2> "Niềm vui đôi khi đến từ <br> những điều nhỏ nhặt nhất trong cuộc sống "</h2>
+                                <!-- <h3> Niềm vui đôi khi đến từ <br> những điều nhỏ nhặt nhất trong cuộc sống</h3>  -->
                             </div>
                             <div class="timecount">
                                 <!-- <h1>The art of life is to know how to enjoy a little</h1> -->
-                                 <h3>Chúng ta đã trãi qua</h3>
+                                 <h3>Chúng ta đã gặp nhau</h3>
                                 <div class="timer-wrapper">
                                 <div class="time-box">
                                     <div id="days" class="number">0</div>
@@ -209,8 +210,8 @@
                         </div>
                         <div class="groom_brial_content">
                             <div class="groom_brial_content_inner wow fadeInRight" data-wow-duration="0.8s">
-                                <span>15 June, 2014</span>
-                                <h2>How we meet</h2>
+                                <span>The Groom</span>
+                                <h2>RYAN LUAN</h2>
                                 <p>Consectetur adipiscing elit. Fringilla at risus orci, tempus facilisi sed. Enim
                                     tortor, faucibus netus orci donec volutpat adipiscing. Sit condimentum elit
                                     convallis libero. Nunc in eu tellus ipsum placerat.</p>
@@ -225,8 +226,8 @@
                         </div>
                         <div class="groom_brial_content">
                             <div class="groom_brial_content_inner wow fadeInLeft" data-wow-duration="0.8s">
-                                <span>15 June, 2014</span>
-                                <h2>How we meet</h2>
+                                <span>The Brial</span>
+                                <h2>HELEN LE</h2>
                                 <p>Consectetur adipiscing elit. Fringilla at risus orci, tempus facilisi sed. Enim
                                     tortor, faucibus netus orci donec volutpat adipiscing. Sit condimentum elit
                                     convallis libero. Nunc in eu tellus ipsum placerat.</p>
