--- a/main.html
+++ b/main.html
@@ -23,24 +23,26 @@
         <!-- Modal Content -->
         <div class="modal-content">
             <span class="modal-close-btn" id="modalCloseBtn">&times;</span>
-            <h3 id="dialogTitle">Xác Nhận Hành Động</h3>
+            <h3 id="dialogTitle">Gửi tới Em</h3>
             <div class="dialog-text-scrollable">
                 <p id="dialogMessage">
-                    Chào mừng bạn đến với hộp thoại tùy chỉnh của chúng tôi<br>
-                     Đây là một đoạn văn bản mẫu khá dài để minh họa chức năng cuộn khi nội dung vượt quá kích thước cho phép. Điều này đảm bảo rằng tất cả thông tin quan trọng sẽ luôn hiển thị đầy đủ cho người dùng, bất kể độ dài của đoạn hội thoại.
-                    <br><br>
-                    Trong nhiều trường hợp, bạn có thể cần hiển thị các điều khoản sử dụng, chính sách bảo mật, hoặc một mô tả chi tiết về một hành động nào đó. Việc có thanh cuộn tự động sẽ giúp trải nghiệm người dùng mượt mà hơn rất nhiều, tránh việc nội dung bị cắt cụt và buộc người dùng phải đoán hoặc tìm cách khác để đọc.
-                    <br><br>
-                    Hãy thử kéo thanh cuộn hoặc sử dụng con lăn chuột của bạn để xem toàn bộ nội dung. Bạn cũng có thể điều chỉnh chiều cao tối đa của vùng văn bản cuộn trong CSS (lớp \`.dialog-text-scrollable\`) để phù hợp với thiết kế tổng thể của ứng dụng hoặc trang web của bạn.
-                    <br><br>
-                    Ngoài ra, chúng tôi đã thêm một nút đóng rõ ràng ở góc trên bên phải của hộp thoại này để bạn có thể dễ dàng thoát khỏi nó. Đây là một yếu tố UI quan trọng giúp người dùng cảm thấy có quyền kiểm soát.
-                    <br><br>
-                    Cảm ơn bạn đã thử nghiệm! Chúng tôi hy vọng tính năng này hữu ích cho dự án của bạn.
+                    Vậy là qua một cái trả đơn đã mở đầu cho nhiều chương khác. Mở đầu cho âm mưu bổ béo chui để bán nội tạng 😏 . Mà nay ú nu rồi. Cảm ớn mí ngừ nha.
+                    
+                    <br>2 đứa đã đi qua cũng nhiều vui buồn cùng nhau. Mong những ngày về sau 2 đứa luôn có nhau, iu shuong quan tâm nhau.
+                    
+                    Đã sắp qua chương mới, nhiều thứ phía trước vui buồn, khó khăn có đủ, dù sao quan trọng vẫn là chúng ta luôn quan tâm iu shương nhau.
+
+                    Chui là một người khô khan, ông già khó ở nên chịu thì chịu, ko chịu thì chịu nha êm. Già z chứ shương mí ngừ nha. Mặc dù mí ngừ lì lắm.
+
+                    Hôm nay là một ngày nắng đẹp, mây trời trong xanh,  thời tiết như cũng ủng hộ chui gửi tới Em những lời này.
+                    "Em Làm zợ Anh nha" ❤️
+
+                    Từ Ông già đáng ghét dễ ở.
                 </p>
             </div>
             <div class="flex-buttons">
                 <button id="yesBtn">
-                    Có
+                    yes
                 </button>
                 <button id="noBtn">
                     Không
