--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     <div id="app">
         <h1>SunShine</h1>
         <button id="openModalBtn">
-            Mở Hộp Thoại
+            Bấm để tiếp tục
         </button>
     </div>
 
@@ -23,26 +23,26 @@
         <!-- Modal Content -->
         <div class="modal-content">
             <span class="modal-close-btn" id="modalCloseBtn">&times;</span>
-            <h3 id="dialogTitle">Gửi tới Em</h3>
+            <h3 id="dialogTitle">Gửi tới Em ❤️</h3>
             <div class="dialog-text-scrollable">
                 <p id="dialogMessage">
-                    Vậy là qua một cái trả đơn đã mở đầu cho nhiều chương khác. Mở đầu cho âm mưu bổ béo chui để bán nội tạng 😏 . Mà nay ú nu rồi. Cảm ớn mí ngừ nha.
+                    Vậy là qua một cái trả đơn đã mở đầu cho nhiều chương khác. Mở đầu cho âm mưu bổ béo chui để bán nội tạng 😏 . Mà nay ú nu rồi. Cảm ơn mí ngừ nha.
                     
-                    <br>2 đứa đã đi qua cũng nhiều vui buồn cùng nhau. Mong những ngày về sau 2 đứa luôn có nhau, iu shuong quan tâm nhau.
+                    <br>Hai đứa đã đi qua cũng nhiều vui buồn cùng nhau. Mong những ngày về sau hai ta luôn có nhau, iu shuong quan tâm nhau.
                     
-                    Đã sắp qua chương mới, nhiều thứ phía trước vui buồn, khó khăn có đủ, dù sao quan trọng vẫn là chúng ta luôn quan tâm iu shương nhau.
+                    <br>Đã sắp qua chương mới, nhiều thứ phía trước vui buồn, khó khăn có đủ, dù sao quan trọng vẫn là chúng ta luôn quan tâm iu shương nhau nha.
 
-                    Chui là một người khô khan, ông già khó ở nên chịu thì chịu, ko chịu thì chịu nha êm. Già z chứ shương mí ngừ nha. Mặc dù mí ngừ lì lắm.
+                    <br>Chui là một người khô khan, ông già khó ở nên chịu thì chịu, ko chịu thì chịu nha êm. Già vậy chứ shương mí ngừ nha. Mặc dù mí ngừ lì lắm.
 
-                    Hôm nay là một ngày nắng đẹp, mây trời trong xanh,  thời tiết như cũng ủng hộ chui gửi tới Em những lời này.
-                    "Em Làm zợ Anh nha" ❤️
+                    <br>Hôm nay là một ngày nắng đẹp, mây trời trong xanh,  thời tiết như cũng ủng hộ chui gửi tới Em những lời này.
+                     <br>Yêu Em "Em Làm zợ Anh nha" ❤️
 
-                    Từ Ông già đáng ghét dễ ở.
+                    <br>ký tên: Từ Ông già đáng ghét dễ ở.
                 </p>
             </div>
             <div class="flex-buttons">
                 <button id="yesBtn">
-                    yes
+                    Đồng ý
                 </button>
                 <button id="noBtn">
                     Không
