--- a/home.html
+++ b/home.html
@@ -272,9 +272,9 @@
                                 <span>Tháng 10, 2023</span>
                                 <h2>Lần đầu gặp mặt</h2>
                                 <p>
-                                    Thật ra chẳng có gặp mặt trực tiếp lần đầu khi nào cả, tất cả là do cô nàng làm sai trong công việc, mà bị ông già bắt bẻ thôi
-                                <br>Mãi cho đến khi qua những cuộc trò chuyện, những lần in ké, thì cũng vào một ngày đẹp trời cuối tuần hẹn gặp nhau<br>
-                            và cô nàng còn tính cho ông già leo cây. và cuối cùng cả hai đã có một buổi gặp mặt trực tiếp đầu tiên</p>
+                                    Do cô nàng làm sai trong công việc, mà bị ông già bắt bẻ, chắc ấn tượng của cô đối với ông già là khó ưa, khó ở lắm.
+                                <br>Mãi cho đến khi qua những cuộc trò chuyện, những lần nàng nhờ in ké, thì vào một ngày đẹp trời cuối tuần cả hai đã có buổi hẹn gặp nhau,<br>
+                            còn chưa biết mặt nhau và cô nàng còn tính cho ông già leo cây. và cuối cùng cả hai đã có một buổi "đối thoại trực tiếp" đầu tiên</p>
                             </div>
                         </div>
                     </div>
