--- a/home.html
+++ b/home.html
@@ -202,34 +202,34 @@
             </div>
         </section>
        
-        <!--Groom , Brial -->
+        <!--Groom , Bridal -->
 
-         <section class="groom_brial_section" id="about">   
+         <section class="groom_bridal_section" id="about">   
             <div class="container">
-            <div class="groom_brial_wrap"> 
-                <div class="groom_brial_item">
-                        <div class="groom_brial_img-wrap">
-                            <div class="groom_brial_story_img wow fadeInLeft animated animated" data-wow-delay="0.8s">
+            <div class="groom_bridal_wrap"> 
+                <div class="groom_bridal_item">
+                        <div class="groom_bridal_img-wrap">
+                            <div class="groom_bridal_story_img wow fadeInLeft animated animated" data-wow-delay="0.8s">
                                 <img src="static/img/cr.jpg" alt="">
                             </div>
                         </div>
-                        <div class="groom_brial_content">
-                            <div class="groom_brial_content_inner wow fadeInRight" data-wow-duration="0.8s">
+                        <div class="groom_bridal_content">
+                            <div class="groom_bridal_content_inner wow fadeInRight" data-wow-duration="0.8s">
                                 <span>The Groom</span>
                                 <h2>RYAN LUAN</h2>
                                 <p>Nam - Một ông già khó ở hướng nội nhà đất cung Ma Kết, Trong một lần "định mệnh" thì gặp được Em.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="groom_brial_item">
-                        <div class="groom_brial_img-wrap">
-                            <div class="groom_brial_story_img wow fadeInRight animated animated" data-wow-delay="0.8s">
+                    <div class="groom_bridal_item">
+                        <div class="groom_bridal_img-wrap">
+                            <div class="groom_bridal_story_img wow fadeInRight animated animated" data-wow-delay="0.8s">
                                 <img src="static/img/cd.jpg" alt="">
                             </div>
                         </div>
-                        <div class="groom_brial_content">
-                            <div class="groom_brial_content_inner wow fadeInLeft" data-wow-duration="0.8s">
-                                <span>The Brial</span>
+                        <div class="groom_bridal_content">
+                            <div class="groom_bridal_content_inner wow fadeInLeft" data-wow-duration="0.8s">
+                                <span>The Bridal</span>
                                 <h2>HELEN LE</h2>
                                 <p>Nữ - Một cô nàng nhà Khí cung Bảo Bình khác với nửa kia là hướng tùm lum, 
                                     <br> Đáng iu, Ngoan hiền, đôi khi hơi vô tri, hơi lì. Cũng trong một lần "định mệnh" thì gặp được ông già.</p>
