--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     const loaderWrapper = document.getElementById('loader-wrapper');
 
     // Đường dẫn đến trang web của bạn sau khi tải xong
-    const yourWebsiteURL = 'https://doananhluan.github.io/ryanL/main.html'; 
+    const yourWebsiteURL = 'https://doananhluan.github.io/ryanL/home.html'; 
 
     // Mô phỏng thời gian tải (có thể là tải dữ liệu, API calls, v.v.)
     setTimeout(function() {
